kubernetes/apps/default/hajimari/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hajimari
spec:
  parentRefs:
    - name: envoy-external
      namespace: networking
  hostnames:
    # yaml-language-server-disable
    - hajimari.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hajimari
          port: 3000
